<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boost Break</string>
    <string name="action_settings">Settings</string>

    <!-- Timer Fragment -->
    <string name="timer_start_button">START/RESUME</string>
    <string name="timer_set_time_button">Set Time</string>
    <string name="timer_pause_button">Pause</string>
    <string name="timer_reset_button">Reset</string>
    <string name="timer_stop_button">Stop</string>
    <string name="timer_in">in</string>


    <string name="logo_description">Logo of the app project</string>
    <string name="break_time_remaining">Next break in</string>
    <string name="break_time_remaining1">Break ends in</string>
    <string name="chronometer">Chronometer</string>
    <string name="time_zero">00:00:00</string>

    <string name="title_activity_exercises_list">Exercises</string>
    <string name="title_activity_statistics">Stats</string>

    <!-- Exercise Fragment -->
    <string name="exercise_action_add">Add</string>
    <string name="exercise_name">Exercise:</string>
    <string name="exercise_duration">Duration: </string>
    <string name="exercise_description">Description: </string>
    <string-array name="exercise_category">
        <item>Upper Body</item>
        <item>Lower Body</item>
        <item>Endurance</item>
        <item>Stretching</item>
    </string-array>


    <!-- Exercise List Fragment -->
    <string name="exercise_list_add_dialog_titile">Add Exercise</string>
    <string name="add_exercise_form_error">Empty or invalid fields</string>
    <string name="exercises_selected_count">count</string>
    <string name="exercises_delete">Delete Exercise(s)</string>
    <plurals name="exercises_delete">
        <item quantity="one">Delete %1$d exercise?</item>
        <item quantity="other">Delete %1$d exercises?</item>
    </plurals>


    <!-- Global -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>
