<?xml version="1.0" encoding="utf-8"?>


    <!-- The main_menu content view -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="#000000" >

        <TextView
            android:id="@+id/appNameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:text="@string/time_zero"
            android:gravity="center_horizontal|center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="100sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic"
            android:layout_alignEnd="@+id/resetButton"
            android:layout_above="@+id/startButton"
            android:layout_below="@+id/appNameTextview" />

        <ToggleButton
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/timer_start_button"
            android:textOn="@string/timer_pause_button"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_above="@+id/setTimeButton"
            android:layout_alignEnd="@+id/setTimeButton" />

        <Button
            android:id="@+id/setTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_set_time_button"
            android:layout_above="@+id/resetButton"
            android:layout_alignEnd="@+id/time_text_view" />



        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_reset_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>
    </ScrollView>
